
2006.0x.xx | Azureus 2.4.0.3

FEATURE: Core | Reduced CPU usage, especially in some unusual conditions [MjrTom]
FEATURE: Core | Explicit local subnet and peer injection option for Lan Peer Finder [Parg]
FEATURE: Core | Auto upload speed [Parg]
FEATURE: Core | DND completion handled better [Parg,TuxPaper]
FEATURE: Core | Added option for per-torrent max upload speed when upload busy [Parg]
FEATURE: UI   | File pieces shown in files view [Parg]

CHANGE: Core  | Reduced starting many pieces instead of completing current ones [MjrTom]
CHANGE: Core  | Further modifications to optimistic disconnect algorithm [MjrTom]

BUGFIX: Core  | Fix for pieces not completing due to too many snubbed peers [MjrTom]


2006.03.16 | Azureus 2.4.0.2

FEATURE: Core | Make default recheck behaviour after crash only check pieces active at last save point plus config to revert to old behaviour of checking everything [Parg]
FEATURE: Core | Attempt to repair invalid port #s returned from trackers potentially improving outgoing connection success rate [MjrTom]
FEATURE: UI   | Allow some selection of split data/protocol stats in some views [Parg]

CHANGE: Core  | Improved payload data vs. protocol overhead byte accounting [Nolar]
CHANGE: Core  | Remove option to truncate files when setting to do-not-download as too many users confused by this [Parg]
CHANGE: Core  | Pick up alerts raised during closedown and give user chance to see them [Parg]
CHANGE: Core  | Improved optimistic disconnect algorithm in several ways - should speed up single seed torrents [MjrTom]
CHANGE: Core  | Only remove temp files created by Azureus in the "tmp" dir as some users placing files in there [Parg]
CHANGE: Core  | Resumed downloads now placed into queued state rather than started [Parg]
CHANGE: Core  | Improved magnet download potential [Parg]
CHANGE: Plug  | Added vendor id to DHT packets and increased version appropriately [Parg]